[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "it-helpdesk-openenv"
version = "1.0.0"
description = "IT Helpdesk ticket triage environment for LLM RL evaluation"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/demonstrikk/openrl"
Repository = "https://github.com/demonstrikkk/openenv"
